# nonebot-plugin-skland

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.css
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
docs/: _render_box_preview.py
migrations/versions/: dc0df0f1535b_gacha_record.py  f28fc6d92636_first_revision.py
nonebot_plugin_skland/: __init__.py  config.py  data_source.py  db_handler.py  download.py  extras.py  filters.py  hook.py  matcher.py  model.py  render.py  roster.py  tasks.py  utils.py
nonebot_plugin_skland/api/: dId.py  login.py  request.py
nonebot_plugin_skland/commands/: __init__.py  arksign.py  bind.py  box.py  campaign.py  card.py  char.py  gacha.py  menu.py  rogue.py  sync.py  zmdsign.py
nonebot_plugin_skland/commands/endfield/: __init__.py  card.py  gacha.py  sign.py  utils.py
nonebot_plugin_skland/migrations/: 8e37a3c71942_add_role_id.py  a689da19471b_ef_gacha_support.py  ae42a302c680_first_revision.py  f7a8b9c0d1e2_campaign_reminder.py
nonebot_plugin_skland/resources/data/: char_catalog.json
nonebot_plugin_skland/resources/templates/: ark_card.html.jinja2  clue.html  clue.html.jinja2  ef_gacha.html.jinja2  ef_gacha_macros.html.jinja2  endfield_card.html.jinja2  endfield_macros.html.jinja2  gacha_macros.html.jinja2  help.html.jinja2  index.css  macros.html.jinja2  operator_roster.html.jinja2  operator_roster_macros.html.jinja2  rogue.html.jinja2  rogue_info.html.jinja2  rogue_macros.html.jinja2  test_ark_card.html
nonebot_plugin_skland/schemas/: __init__.py  ark_card.py  ark_sign.py  cred.py  gacha.py  response.py  rogue.py
nonebot_plugin_skland/schemas/ark_models/: __init__.py  assist_chars.py  base.py  building.py  equip.py
nonebot_plugin_skland/schemas/ark_models/buildings/: __init__.py  base.py  control.py  dormitory.py  (+7 more)
nonebot_plugin_skland/schemas/arknights/: __init__.py  card.py  game_data.py  operators.py
nonebot_plugin_skland/schemas/endfield/: __init__.py  card.py
nonebot_plugin_skland/schemas/rogue_models/: rogue_history.py
tests/: conftest.py  test_campaign_reminder.py  test_ef_gacha_joint_pool.py  test_operator_roster.py  test_skland_api.py
(+12 files in other folders)
