[project]
name = "nonebot-plugin-skland"
version = "0.6.6"
description = "通过森空岛查询游戏数据,支持明日方舟和终末地"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "FrostN0v0", email = "1614591760@qq.com" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "nonebot-plugin-alconna>=0.57.1",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-argot>=0.2.1",
    "nonebot-plugin-htmlrender>=0.6.5",
    "nonebot-plugin-localstore>=0.7.3",
    "nonebot-plugin-orm>=0.7.6",
    "nonebot-plugin-user>=0.5.0",
    "nonebot-plugin-waiter>=0.8.0",
    "nonebot2>=2.4.2",
    "qrcode[pil]>=7.4.2",
    "rich>=13.9.4",
    "arclet-alconna>=1.8.38"
]

[project.urls]
homepage = "https://github.com/FrostN0v0/nonebot-plugin-skland"
repository = "https://github.com/FrostN0v0/nonebot-plugin-skland"

[dependency-groups]
dev = [
    "nonebot-adapter-discord>=0.1.8",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-adapter-telegram>=0.1.0b20",
    "nonebot-plugin-orm[default]>=0.7.6",
    "nonebot2[fastapi,aiohttp]>=2.4.1",
    "nonebug>=0.4.3",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.nonebot]
plugins = ["nonebot_plugin_skland"]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Telegram", module_name = "nonebot.adapters.telegram" },
    { name = "Discord", module_name = "nonebot.adapters.discord" },
]


[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.pdm.scripts]
build_css = "npx tailwindcss -i ./tailwind.css -o ./nonebot_plugin_skland/resources/templates/index.css -w"
